# realestate-scrapper

./: .gitignore  Architecture realEstateScraper.drawio  README.md  pyproject.toml  scrapy.cfg
doc/: Architecture realEstateScraper.drawio
realestate_scraper/: items.py  settings.py
realestate_scraper/spiders/: atlantiquesud_spider.py
