[tool.poetry]
name = "web-scrapper"
version = "0.1.0"
description = ""
authors = ["Allan Jard <allan.jard@pm.me>"]

[tool.poetry.dependencies]
python = "^3.6"
Scrapy = "^2.4.1"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
